# freetuxtv

./: .gitignore  AUTHORS  CMakeLists.txt  CPackOptions.cmake.in  ChangeLog  ChangeLog-fr  Contribute.md  DeveloperHelp.md  FAQ.md  HomePage.md  HowToInstall.md  INSTALL  Makefile  Makefile.am  Manual.md  PackagesCreation.md  ProjectHome.md  README  README.md  RoadMap.md  TableOfContents.md  UpdatesChannelLists.md  autogen.sh  bootstrap  config.h.in  configure.ac  configure.in  tshirt_japonais.mpg  tvh.m3u  version.h.in
data/: Makefile.am  channel_logos.xml  channels_groups.xml  channels_groups.xml.in  channels_logos.xml  freetuxtv.glade  sqlite3-create-tables.sql  tv_channels.xml
data/icons/: Makefile.am
data/images/: Makefile.am
data/images/channels/: Makefile.am
data/menu/: freetuxtv.desktop  freetuxtv.desktop.in
data/ui/: Makefile.am  addchannelsgroups.glade  addrecording.glade  channelproperties.glade  freetuxtv.glade  freetuxtv.ui  tvchannelsdatabase.glade
lib/libdbevolution/: Makefile.am  db-evolution-instance.c  db-evolution-instance.h
src/: Makefile.am  freetuxtv-app.h  freetuxtv-callbacks.c  freetuxtv-callbacks.h  freetuxtv-cclosure-marshal.c  freetuxtv-cellrenderer-channelslist.c  freetuxtv-cellrenderer-channelslist.h  freetuxtv-cellrenderer-recordingslist.c  freetuxtv-channel-infos.c  freetuxtv-channel-infos.h  freetuxtv-channel.c  freetuxtv-channel.h  freetuxtv-channels-group-infos.c  freetuxtv-channels-group-infos.h  freetuxtv-channels-group.c  freetuxtv-channels-group.h  freetuxtv-channels-list-window.c  freetuxtv-channels-list-window.h  freetuxtv-channels-list.c  freetuxtv-channels-list.h  freetuxtv-config.c  freetuxtv-config.h  freetuxtv-db-sync.c  freetuxtv-db-sync.h  freetuxtv-fileutils.c  freetuxtv-fileutils.h  freetuxtv-gladexml.h  freetuxtv-i18n.h  freetuxtv-logos-list.c  freetuxtv-logos-list.h  freetuxtv-main-window.c  freetuxtv-main-window.h  freetuxtv-models.c  freetuxtv-models.h  freetuxtv-player-error-dialog.c  freetuxtv-player.c  freetuxtv-player.h  freetuxtv-recording-infos.h  freetuxtv-recordings-list.c  freetuxtv-recordings-list.h  (+36 more)
src/Database/: DatabaseController.cpp  DatabaseController.h  DatabaseInstance.cpp  DatabaseInstance.h
src/GUI/: QAddChannelsGroupDialog.cpp  QAddChannelsGroupDialog.h  QApplicationMainWindow.cpp  QApplicationMainWindow.h  QCtrlBarView.cpp  QCtrlBarView.h  QPreferencesDialog.cpp  QPreferencesDialog.h
src/GUIController/: QAddChannelsGroupDialogController.cpp  QAddChannelsGroupDialogController.h  QApplicationMainWindowController.cpp  QApplicationMainWindowController.h  QPreferencesDialogController.cpp  QPreferencesDialogController.h
src/GUIModel/: QChannelsGroupItem.cpp  QChannelsGroupItem.h  QChannelsGroupListModel.cpp  QChannelsGroupListModel.h
src/Global/: Application.cpp  Application.h  FileUtils.cpp  FileUtils.h  QError.cpp  QError.h  QFileDownloader.cpp  QFileDownloader.h  UserPaths.cpp  UserPaths.h
src/Model/: ChannelInfos.cpp  ChannelInfos.h  ChannelsGroupInfos.cpp  ChannelsGroupInfos.h  ChannelsGroupSection.cpp  ChannelsGroupSection.h  Preferences.cpp  Preferences.h  Proxy.cpp  Proxy.h
src/XML/: ChannelsGroupsParserHandler.cpp  ChannelsGroupsParserHandler.h
src/glade/: Interface.glade
tags/freetuxtv-0.1.1/src/: Makefile.am  freetuxtv-app.h  lib-m3uparser.c  main.c
tags/freetuxtv-0.6.0/: Makefile.am  configure.ac
tags/freetuxtv-0.6.0/data/ui/: freetuxtv.glade
tags/freetuxtv-0.6.0/po/: POTFILES.in  zh_CN.po
tags/freetuxtv-0.6.0/src/: freetuxtv-cellrenderer-channelslist.c  freetuxtv-cellrenderer-recordingslist.c  freetuxtv-channels-list.c  freetuxtv-recordings-list.h  freetuxtv-tv-channels-list.c  gtk-builder-dialog.c  gtk-builder-window.c
tags/freetuxtv-0.6.3/lib/libvlc-gtk/: Makefile.am
trunk/: AUTHORS  ChangeLog  ChangeLog-fr  Makefile  Makefile.am  README  configure.ac  configure.in
trunk/FreeTuxTV/FreeTuxTV/: README
trunk/config/: sqlite3-create-tables.sql
trunk/data/: Makefile.am  channel_logos.xml  channels_groups.xml  channels_groups.xml.in  channels_logos.xml  freetuxtv.glade  sqlite3-create-tables.sql  tv_channels.xml
trunk/data/images/: Makefile.am
trunk/data/images/channels/: Makefile.am
trunk/data/images/groups/: Makefile.am
trunk/data/ui/: addchannelsgroups.glade  addrecording.glade  freetuxtv.glade  freetuxtv.ui  tvchannelsdatabase.glade
trunk/freetuxtv/: config.h.in  configure.in
trunk/freetuxtv/autom4te.cache/: traces.0  traces.1
trunk/freetuxtv/data/: Makefile.am  sqlite3-create-tables.sql
trunk/freetuxtv/data/menu/: Makefile
trunk/freetuxtv/src/: freetuxtv-logos-list-window.c  main.c.r47
trunk/images/channels/: Makefile.am
trunk/lib/: Makefile.am
trunk/lib/libdbevolution/: db-evolution-instance.c
trunk/lib/libvlc-gtk/: Makefile.am  gtk-libvlc-instance.c  gtk-libvlc-instance.h  gtk-libvlc-media-player.c  gtk-libvlc-media-player.h  gtk-libvlc-media.c  gtk-libvlc-media.h  gtk-libvlc-private.h
trunk/po/: LINGUAS  POTFILES.in  de.po  es.po  fr.po  freetuxtv.pot  pl.po  pt.po  ru.po  zh_CN.po  zh_TW.po
trunk/src/: Makefile.am  freetuxtv-app.h  freetuxtv-cellrenderer-channelslist.c  freetuxtv-cellrenderer-recordingslist.c  freetuxtv-channel-infos.c  freetuxtv-channel-infos.h  freetuxtv-channel.c  freetuxtv-channel.h  freetuxtv-channels-group-infos.c  freetuxtv-channels-group-infos.h  freetuxtv-channels-group.c  freetuxtv-channels-group.h  freetuxtv-channels-list-window.c  freetuxtv-channels-list-window.h  freetuxtv-channels-list.c  freetuxtv-channels-list.h  freetuxtv-config.c  freetuxtv-db-sync.c  freetuxtv-db-sync.h  freetuxtv-fileutils.c  freetuxtv-fileutils.h  freetuxtv-i18n.h  freetuxtv-logos-list-window.c  freetuxtv-logos-list-window.h  freetuxtv-logos-list.c  freetuxtv-logos-list.h  freetuxtv-main-window.c  freetuxtv-main-window.h  freetuxtv-models.c  freetuxtv-models.h  freetuxtv-player-error-dialog.c  freetuxtv-player.c  freetuxtv-player.h  freetuxtv-recording-infos.c  freetuxtv-recordings-list.c  freetuxtv-statusbar.c  freetuxtv-tv-channel-infos.c  freetuxtv-tv-channels-list.c  freetuxtv-utils.c  freetuxtv-utils.h  (+25 more)
(+657 files in other folders)
